# panels

./: Cargo.toml  README.md
panels-tester/: Cargo.toml
panels-tester/src/: conductor.rs  main.rs  panel.rs  surface.rs
src/: apiloop.rs  appmgmt.rs  bindgroupreg.rs  camera.rs  combos.rs  lib.rs  modelbuffers.rs  panel.rs  panelmgmt.rs  pipelines.rs  programhook.rs  proxyevents.rs  rect.rs  renderable.rs  renderablestate.rs  rendererinit.rs  renderobj.rs  resourcebytes.rs  schedule.rs  shader.wgsl  texture.rs  texturerenderer.rs  timing.rs  transform2d.rs  util.rs  wgpustate.rs
wgpu-state/src/: bindgroupreg.rs  userimpl.rs
