[package]
name = "panels"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
image = "0.23.14"
winit = "0.25.0"
cgmath = "0.18.0"
env_logger = "0.9.0"
log = "0.4.14"
wgpu = { version = "0.11.0", features = ["spirv"]}
pollster = "0.2.4"
bytemuck = {version = "1.7.2", features = ["derive"] }